--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       href="./assets/images/favicon-32x32.png"
     />
     <title>Frontend Mentor | Social links profile</title>
+
+    <link rel="stylesheet" href="./styles.css" />
   </head>
-  <body></body>
+  <body>
+    <main></main>
+  </body>
 </html>
