--- a/index.html
+++ b/index.html
@@ -15,6 +15,23 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <main></main>
+    <main>
+      <article>
+        <img
+          src="./assets/images/avatar-jessica.jpeg"
+          alt="Avatar Image of Jessica Randall"
+        />
+        <div>Jessica Randall</div>
+        <div>London, United Kingdom</div>
+        <div>"Front-end developer and avid reader</div>
+        <ul>
+          <li><a href="/" alt="Link to Github">Github</a></li>
+          <li><a href="/" alt="Link to Frontend Mentor">Frontend Mentor</a></li>
+          <li><a href="/" alt="Link to LinkedIn">LinkedIn</a></li>
+          <li><a href="/" alt="Link to Twitter">Twitter</a></li>
+          <li><a href="/" alt="Link to Instagram">Instagram</a></li>
+        </ul>
+      </article>
+    </main>
   </body>
 </html>
