--- a/index.html
+++ b/index.html
@@ -17,20 +17,28 @@
   <body>
     <main>
       <article>
-        <img
-          src="./assets/images/avatar-jessica.jpeg"
-          alt="Avatar Image of Jessica Randall"
-        />
-        <div>Jessica Randall</div>
-        <div>London, United Kingdom</div>
-        <div>"Front-end developer and avid reader</div>
-        <ul>
-          <li><a href="/" alt="Link to Github">Github</a></li>
-          <li><a href="/" alt="Link to Frontend Mentor">Frontend Mentor</a></li>
-          <li><a href="/" alt="Link to LinkedIn">LinkedIn</a></li>
-          <li><a href="/" alt="Link to Twitter">Twitter</a></li>
-          <li><a href="/" alt="Link to Instagram">Instagram</a></li>
-        </ul>
+        <header>
+          <img
+            src="./assets/images/avatar-jessica.jpeg"
+            alt="Avatar of Jessica Randall"
+          />
+          <h1>Jessica Randall</h1>
+          <address>London, United Kingdom</address>
+        </header>
+
+        <blockquote>"Front-end developer and avid reader</blockquote>
+
+        <nav aria-label="Social links">
+          <ul>
+            <li><a href="#">Github</a></li>
+            <li>
+              <a href="#">Frontend Mentor</a>
+            </li>
+            <li><a href="#">LinkedIn</a></li>
+            <li><a href="#">Twitter</a></li>
+            <li><a href="#">Instagram</a></li>
+          </ul>
+        </nav>
       </article>
     </main>
   </body>
