--- a/index.html
+++ b/index.html
@@ -15,31 +15,33 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <main>
-      <article>
-        <header>
-          <img
-            src="./assets/images/avatar-jessica.jpeg"
-            alt="Avatar of Jessica Randall"
-          />
-          <h1>Jessica Randall</h1>
-          <address>London, United Kingdom</address>
-        </header>
+    <div class="wrapper">
+      <main>
+        <article>
+          <header>
+            <img
+              src="./assets/images/avatar-jessica.jpeg"
+              alt="Avatar of Jessica Randall"
+            />
+            <h1>Jessica Randall</h1>
+            <address>London, United Kingdom</address>
+          </header>
 
-        <blockquote>"Front-end developer and avid reader</blockquote>
+          <blockquote>"Front-end developer and avid reader</blockquote>
 
-        <nav aria-label="Social links">
-          <ul>
-            <li><a href="#">Github</a></li>
-            <li>
-              <a href="#">Frontend Mentor</a>
-            </li>
-            <li><a href="#">LinkedIn</a></li>
-            <li><a href="#">Twitter</a></li>
-            <li><a href="#">Instagram</a></li>
-          </ul>
-        </nav>
-      </article>
-    </main>
+          <nav aria-label="Social links">
+            <ul>
+              <li><a href="#">Github</a></li>
+              <li>
+                <a href="#">Frontend Mentor</a>
+              </li>
+              <li><a href="#">LinkedIn</a></li>
+              <li><a href="#">Twitter</a></li>
+              <li><a href="#">Instagram</a></li>
+            </ul>
+          </nav>
+        </article>
+      </main>
+    </div>
   </body>
 </html>
