--- a/index.html
+++ b/index.html
@@ -17,27 +17,30 @@
   <body>
     <div class="wrapper">
       <main>
-        <article>
-          <header>
+        <article class="card">
+          <header class="card-header">
             <img
               src="./assets/images/avatar-jessica.jpeg"
               alt="Avatar of Jessica Randall"
+              class="card-avatar"
             />
-            <h1>Jessica Randall</h1>
-            <address>London, United Kingdom</address>
+            <h1 class="card-header">Jessica Randall</h1>
+            <address class="card-address">London, United Kingdom</address>
           </header>
 
-          <blockquote>"Front-end developer and avid reader</blockquote>
+          <blockquote class="card-quote">
+            "Front-end developer and avid reader
+          </blockquote>
 
-          <nav aria-label="Social links">
+          <nav aria-label="Social links" class="card-nav">
             <ul>
-              <li><a href="#">Github</a></li>
+              <li><a href="#" class="card-link">Github</a></li>
               <li>
-                <a href="#">Frontend Mentor</a>
+                <a href="#" class="card-link">Frontend Mentor</a>
               </li>
-              <li><a href="#">LinkedIn</a></li>
-              <li><a href="#">Twitter</a></li>
-              <li><a href="#">Instagram</a></li>
+              <li><a href="#" class="card-link">LinkedIn</a></li>
+              <li><a href="#" class="card-link">Twitter</a></li>
+              <li><a href="#" class="card-link">Instagram</a></li>
             </ul>
           </nav>
         </article>
