--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
 
           <nav aria-label="Social links" class="card-nav">
             <ul>
-              <li><a href="#" class="card-link">Github</a></li>
+              <li><a href="#" class="card-nav-link">Github</a></li>
               <li>
-                <a href="#" class="card-link">Frontend Mentor</a>
+                <a href="#" class="card-nav-link">Frontend Mentor</a>
               </li>
-              <li><a href="#" class="card-link">LinkedIn</a></li>
-              <li><a href="#" class="card-link">Twitter</a></li>
-              <li><a href="#" class="card-link">Instagram</a></li>
+              <li><a href="#" class="card-nav-link">LinkedIn</a></li>
+              <li><a href="#" class="card-nav-link">Twitter</a></li>
+              <li><a href="#" class="card-nav-link">Instagram</a></li>
             </ul>
           </nav>
         </article>
