--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               alt="Avatar of Jessica Randall"
               class="card-avatar"
             />
-            <h1 class="card-header">Jessica Randall</h1>
+            <h1 class="card-heading">Jessica Randall</h1>
             <address class="card-address">London, United Kingdom</address>
           </header>
 
