--- a/index.html
+++ b/index.html
@@ -29,18 +29,26 @@
           </header>
 
           <blockquote class="card-quote">
-            "Front-end developer and avid reader
+            "Front-end developer and avid reader."
           </blockquote>
 
           <nav aria-label="Social links" class="card-nav">
-            <ul>
-              <li><a href="#" class="card-nav-link">Github</a></li>
-              <li>
+            <ul class="card-nav-ul">
+              <li class="card-nav-li">
+                <a href="#" class="card-nav-link">Github</a>
+              </li>
+              <li class="card-nav-li">
                 <a href="#" class="card-nav-link">Frontend Mentor</a>
               </li>
-              <li><a href="#" class="card-nav-link">LinkedIn</a></li>
-              <li><a href="#" class="card-nav-link">Twitter</a></li>
-              <li><a href="#" class="card-nav-link">Instagram</a></li>
+              <li class="card-nav-li">
+                <a href="#" class="card-nav-link">LinkedIn</a>
+              </li>
+              <li class="card-nav-li">
+                <a href="#" class="card-nav-link">Twitter</a>
+              </li>
+              <li class="card-nav-li">
+                <a href="#" class="card-nav-link">Instagram</a>
+              </li>
             </ul>
           </nav>
         </article>
